fix remove padding and margin to prevent overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,11 @@
 	--whitesmoke: 245, 245, 245;
 	/* Off white colour used in the footer for the social media icons */
 }
+
+.row, .container-fluid, .container-lg{
+    padding:0;
+    margin:0;
+} /*  fix potential overflow situation that was happening on smaller screens */
 body {
 	background-color: rgba(var(--green-bg-light), 1);
 	/* green mist #c9d3aa - light green background colour */
